--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,22 @@
 <html>
     <head>
-        <title>Django Бой blog</title>
+        <title>Django Boy blog</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Лайв жорнал</a></h1>
+            <h1><a href="/">Layv jornal</a></h1>
         </div>
 
         <div>
-            <p>published: 30.03.2018, 22.18</p>
-            <h2><a href="">Пост номер раз</a></h2>
-            <p>Вот это да</p>
+            <p>pablished: 30.03.2018, 22.18</p>
+            <h2><a href="">post nomer raz</a></h2>
+            <p>vot eto da</p>
         </div>
 
         <div>
-            <p>published: 30.03.2018, 22.08</p>
-            <h2><a href="">Пост номер два</a></h2>
-            <p>вот так так</p>
+            <p>pablished: 30.03.2018, 22.08</p>
+            <h2><a href="">Post nomer dva</a></h2>
+            <p>vot tak tak</p>
         </div>
     </body>
 </html>
