--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,22 +1,14 @@
-<html>
-    <head>
-        <title>Django Boy blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Layv jornal</a></h1>
-        </div>
 
-        <div>
-            <p>pablished: 30.03.2018, 22.18</p>
-            <h2><a href="">post nomer raz</a></h2>
-            <p>vot eto da</p>
+{% extends 'blog/base.html' %}
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+<div class="date">
+                {{ post.published_date }}
+            </div>
         </div>
-
-        <div>
-            <p>pablished: 30.03.2018, 22.08</p>
-            <h2><a href="">Post nomer dva</a></h2>
-            <p>vot tak tak</p>
-        </div>
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
